--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "declarationDir": "./dist/types",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "listEmittedFiles": true,
     "strict": true,
     "skipLibCheck": true
   }
