--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
     "build": "yarn clean && yarn exec tsc",
     "build:publish": "yarn build && yarn npm publish && yarn build:docs && yarn publish:docs",
     "build:publish-prerelease": "yarn build && yarn npm publish --tag pre",
-    "build:docs": "yarn exec typedoc --tsconfig ./docs/typedoc.json",
-    "update:docs": "yarn workspace docs update",
     "test": "yarn build && yarn ./test/ install && yarn workspace test start",
-    "publish:docs": "yarn build:docs && yarn update:docs",
+    "docs": "yarn exec docgen --typescript true -c ./docs/index.json -o ./docs/docs.json -i src/index.ts",
     "watch": "yarn exec tsc --watch --noEmit"
   },
   "repository": {
@@ -55,11 +53,11 @@
     "yaml": "^2.1.1"
   },
   "devDependencies": {
+    "@discordjs/docgen": "^0.12.1",
     "@types/node": "^18.7.18",
     "@types/semver": "^7.3.12",
     "discord.js": "^14.3.0",
     "rimraf": "^3.0.2",
-    "typedoc": "^0.23.14",
     "typedoc-plugin-discord-types": "^1.0.2",
     "typedoc-plugin-djs-links": "^1.2.0",
     "typedoc-plugin-mdn-links": "^2.0.0",
@@ -69,8 +67,7 @@
     "discord.js": "^14.1.0"
   },
   "workspaces": [
-    "./docs/",
-    "./test/"
+    "test"
   ],
   "packageManager": "yarn@3.2.2"
 }
