--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "clean": "yarn exec rimraf dist",
     "build": "yarn clean && yarn exec tsc",
-    "build:publish": "yarn build && yarn npm publish && yarn build:docs && yarn publish:docs",
+    "build:publish": "yarn build && yarn docs && yarn npm publish",
     "build:publish-prerelease": "yarn build && yarn npm publish --tag pre",
     "test": "yarn build && yarn ./test/ install && yarn workspace test start",
     "docs": "yarn exec docgen --typescript true -c ./docs/index.json -o ./docs/docs.json -i src/index.ts",
