Revert "esm support"
This reverts commit f19ffb501511ca21b3c6722364271b494ddca2ac.

--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
   "name": "reciple",
-  "version": "5.6.0",
-  "bin": "./dist/cjs/bin.js",
+  "version": "5.5.3",
+  "bin": "dist/cjs/bin.js",
   "license": "GPL-3.0",
-  "main": "./dist/cjs/index.js",
-  "typings": "./dist/types/index.d.ts",
-  "module": "./dist/mjs/index.js",
+  "main": "dist/cjs/index.js",
+  "typings": "dist/types/index.d.ts",
   "author": "FalloutStudios",
   "description": "Handler for Discord.js",
   "homepage": "https://reciple.js.org",
-  "exports": {
-    "require": "./dist/cjs/index.js",
-    "import": "./dist/mjs/index.js"
-  },
   "keywords": [
     "Discord",
     "Discord.js handler",
@@ -26,10 +21,7 @@
   },
   "scripts": {
     "clean": "yarn exec rimraf dist",
-    "build": "yarn clean && yarn build:types && yarn build:cjs && yarn build:mjs",
-    "build:types": "npx tsc -p ./tsconfig/tsconfig.types.json",
-    "build:cjs": "npx tsc -p ./tsconfig/tsconfig.cjs.json",
-    "build:mjs": "npx tsc -p ./tsconfig/tsconfig.mjs.json && echo '{ \"type\": \"module\" }' >> ./dist/mjs/package.json",
+    "build": "yarn clean && yarn exec tsc",
     "build:publish": "yarn build && yarn docs && yarn npm publish",
     "build:publish-prerelease": "yarn build && yarn npm publish --tag pre",
     "test": "yarn build && yarn workspace test start",
@@ -69,7 +61,7 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "discord.js": "^14.5.0"
+    "discord.js": "^14.1.0"
   },
   "workspaces": [
     "test"
