--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "reciple",
-  "version": "5.6.0",
-  "bin": "dist/cjs/bin.js",
+  "version": "6.0.0",
+  "bin": "./dist/cjs/bin.js",
   "license": "GPL-3.0",
-  "main": "dist/cjs/index.js",
-  "typings": "dist/types/index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "typings": "./dist/types/index.d.ts",
+  "module": "./dist/mjs/index.js",
   "author": "FalloutStudios",
   "description": "Handler for Discord.js",
   "homepage": "https://reciple.js.org",
+  "exports": {
+    "require": "./dist/cjs/index.js",
+    "import": "./dist/mjs/index.js"
+  },
   "keywords": [
     "Discord",
     "Discord.js handler",
-    "Reciple",
-    "Slash command handler",
-    "Message command handler"
+    "Reciple"
   ],
   "contributors": [
     "GhexterCortes"
@@ -23,7 +26,10 @@
   },
   "scripts": {
     "clean": "yarn exec rimraf dist",
-    "build": "yarn clean && yarn exec tsc",
+    "build": "yarn clean && yarn build:types && yarn build:cjs && yarn build:mjs",
+    "build:types": "npx tsc -p ./tsconfig/tsconfig.types.json",
+    "build:cjs": "npx tsc -p ./tsconfig/tsconfig.cjs.json",
+    "build:mjs": "npx tsc -p ./tsconfig/tsconfig.mjs.json && echo '{ \"type\": \"module\" }' >> ./dist/mjs/package.json",
     "build:publish": "yarn build && yarn docs && yarn npm publish",
     "build:publish-prerelease": "yarn build && yarn npm publish --tag pre",
     "test": "yarn build && yarn workspace test start",
@@ -49,21 +55,21 @@
     "chalk": "4.1.2",
     "commander": "^9.4.1",
     "dotenv": "^16.0.3",
-    "fallout-utility": "^1.5.2",
-    "semver": "^7.3.8",
+    "fallout-utility": "^1.5.4",
+    "semver": "^7.3.7",
     "wildcard-match": "^5.1.2",
-    "yaml": "^2.1.3"
+    "yaml": "^2.1.1"
   },
   "devDependencies": {
     "@discordjs/docgen": "^0.12.1",
-    "@types/node": "^18.8.3",
+    "@types/node": "^18.11.0",
     "@types/semver": "^7.3.12",
-    "discord.js": "^14.5.0",
+    "discord.js": "^14.6.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "discord.js": "^14.1.0"
+    "discord.js": "^14.5.0"
   },
   "workspaces": [
     "test"
