--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "url": "https://github.com/FalloutStudios/reciple/issues"
   },
   "scripts": {
+    "format": "yarn prettier --write src",
     "clean": "yarn exec rimraf dist",
-    "build": "yarn clean && yarn exec tsc",
+    "build": "yarn clean && yarn format && yarn exec tsc",
     "build:publish": "yarn build && yarn docs && yarn npm publish",
     "build:publish-dev": "yarn build && yarn npm publish --tag dev",
     "test": "yarn build && yarn workspace test start",
@@ -61,6 +62,7 @@
     "@types/node": "^18.11.0",
     "@types/semver": "^7.3.12",
     "discord.js": "^14.6.0",
+    "prettier": "2.7.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.8.4"
   },
