--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,10 @@
 {
-  "editorconfig": true,
   "endOfLine": "lf",
   "tabWidth": 4,
   "trailingComma": "es5",
   "arrowParens": "avoid",
-  "singleQuote": true
+  "singleQuote": true,
+  "printWidth": 200,
+  "bracketSpacing": true,
+  "parser": "typescript"
 }
