--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "url": "https://github.com/FalloutStudios/reciple/issues"
   },
   "scripts": {
-    "format": "yarn prettier --write src",
-    "clean": "yarn exec rimraf dist",
-    "build": "yarn clean && yarn exec tsc",
-    "build:publish": "yarn format && yarn build && yarn docs && yarn npm publish",
-    "build:publish-dev": "yarn format && yarn build && yarn npm publish --tag dev",
-    "test": "yarn build && yarn workspace test start",
-    "docs": "yarn exec docgen --typescript true -c ./docs/index.json -o ./docs/docs.json -i src/index.ts",
-    "watch": "yarn exec tsc --watch --noEmit",
-    "husky:install": "husky install"
+    "format": "npx prettier --write src",
+    "clean": "npx rimraf dist",
+    "build": "npm run clean && npx tsc",
+    "build:publish": "npm run format && npm run build && npx docs && npm publish",
+    "build:publish-dev": "npm run format && npm run build && npm publish --tag dev",
+    "test": "npm run build && npm run start -w test",
+    "docs": "npx docgen --typescript true -c ./docs/index.json -o ./docs/docs.json -i src/index.ts",
+    "watch": "npx tsc --watch --noEmit",
+    "husky:install": "npx husky install"
   },
   "repository": {
     "type": "git",
@@ -74,6 +74,5 @@
   },
   "workspaces": [
     "test"
-  ],
-  "packageManager": "yarn@3.2.2"
+  ]
 }
