--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: 16
 
       - name: Install dependencidocses
-        run: yarn install
+        run: npm ci
 
       - name: Deploy docs
         uses: discordjs/action-docs@v1
