--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,19 @@
 {
+  "include": [
+    "./src/**/*"
+  ],
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "Node16",
     "rootDir": "./src",
     "declaration": true,
-    "outDir": "./dist/cjs",
+    "outDir": "./dist/lib",
     "declarationDir": "./dist/types",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "listEmittedFiles": true,
+    "moduleResolution": "Node16",
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   }
 }
