--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reciple",
-  "version": "6.0.0-dev.10",
+  "version": "6.0.0-dev.11",
   "bin": "./dist/bin/bin.mjs",
   "license": "GPL-3.0",
   "type": "commonjs",
@@ -53,7 +53,9 @@
     "node": ">=16.9.0"
   },
   "files": [
+    "bin",
     "dist",
+    "esm.mjs",
     "resource",
     "LICENSE",
     "README.md"
