--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "commonjs",
   "license": "GPL-3.0",
   "engineStrict": true,
-  "version": "6.0.0-dev.29",
+  "version": "6.0.0-dev.30",
   "author": "FalloutStudios",
   "main": "./dist/lib/index.js",
   "module": "./dist/lib/esm.mjs",
@@ -74,12 +74,12 @@
   "devDependencies": {
     "@discordjs/docgen": "^0.12.1",
     "@types/micromatch": "^4.0.2",
-    "@types/node": "^18.11.7",
+    "@types/node": "^18.11.9",
     "@types/semver": "^7.3.13",
     "discord.js": "^14.6.0",
-    "prettier": "2.7.1",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   },
   "peerDependencies": {
     "discord.js": "^14.5.0"
