--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,10 +27,14 @@
     "build": "npx tsc"
   },
   "dependencies": {
-    "fallout-utility": "^2.0.0",
-    "tiny-typed-emitter": "^2.1.0"
+    "fallout-utility": "*",
+    "semver": "^7.3.8",
+    "tiny-typed-emitter": "^2.1.0",
+    "ts-mixer": "^6.0.2",
+    "yaml": "^2.2.0"
   },
   "devDependencies": {
+    "@types/semver": "^7.3.13",
     "discord.js": "^14.7.1"
   },
   "peerDependencies": {
