--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^18.11.18",
     "lerna": "^6.1.0",
     "rimraf": "^3.0.2",
+    "ts-mixer": "^6.0.2",
     "typescript": "^4.9.4"
   }
 }
