--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "scripts": {
     "clean": "npx rimraf ./packages/bin ./packages/dist",
-    "build": "npm run clean && npx lerna run build && npm i"
+    "build": "npx lerna run build && npm i"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
