--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,7 +18,19 @@
     "build": "npm run clean && npx tsc"
   },
   "dependencies": {
-    "discord.js": "^14.7.1",
-    "fallout-utility": "^2.1.3"
+    "fallout-utility": "*",
+    "lodash.defaultsdeep": "^4.6.1",
+    "semver": "^7.3.8",
+    "tiny-typed-emitter": "^2.1.0",
+    "ts-mixer": "^6.0.2",
+    "yaml": "^2.2.0"
+  },
+  "devDependencies": {
+    "@types/lodash.defaultsdeep": "^4.6.7",
+    "@types/semver": "^7.3.13",
+    "discord.js": "^14.7.1"
+  },
+  "peerDependencies": {
+    "discord.js": "^14.7.1"
   }
 }
