--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   ],
   "scripts": {
     "clean": "npx rimraf ./packages/bin ./packages/dist",
-    "build": "npx lerna run build && npm i"
+    "build": "npx lerna run build && npm i",
+    "watch": "npx tsc --watch --noEmit"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
