--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "packages/*"
   ],
   "scripts": {
+    "bootstrap": "npx lerna bootstrap",
     "clean": "npx rimraf ./packages/bin ./packages/dist",
-    "build": "npx lerna run build && npm i",
+    "build": "npx lerna run build && npm run bootstrap",
     "watch": "npx tsc --watch --noEmit"
   },
   "devDependencies": {
