--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -13,11 +13,31 @@
       "require": "./bin/index.js"
     }
   },
+  "scripts": {
+    "clean": "npx rimraf ./bin",
+    "build": "npm run clean && npx tsc"
+  },
   "files": [
     "bin",
     "static"
   ],
   "dependencies": {
-    "@reciple/client": "^7.0.0"
+    "@inquirer/confirm": "^0.0.28-alpha.0",
+    "@inquirer/password": "^0.0.28-alpha.0",
+    "@reciple/client": "^7.0.0",
+    "chalk": "4.1.2",
+    "commander": "^10.0.0",
+    "dotenv": "^16.0.3",
+    "fallout-utility": "^2.1.3",
+    "globby": "^13.1.3",
+    "micromatch": "^4.0.5",
+    "yaml": "^2.2.1"
+  },
+  "devDependencies": {
+    "@types/micromatch": "^4.0.2",
+    "discord.js": "^14.7.1"
+  },
+  "peerDependencies": {
+    "discord.js": "^14.7.1"
   }
 }
