--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "reciple-monorepo",
   "license": "GPL-3.0",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "test"
   ],
   "scripts": {
     "bootstrap": "npx lerna bootstrap",
