--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "clean": "npx rimraf ./packages/bin ./packages/dist",
     "build": "npx lerna run build && npm run bootstrap",
     "watch": "npx tsc --watch --noEmit",
-    "test": "node ./packages/reciple/bin/bin.mjs ./test -t env:TOKEN -y"
+    "test": "node ./packages/reciple/bin/bin.mjs ./test -t env:TOKEN -y",
+    "publish:next": "npx lerna publish --temp-tag next",
+    "publish:all": "npx lerna publish"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
