--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,7 +2,7 @@
   "name": "@reciple/client",
   "description": "Reciple builder classes",
   "license": "GPL-3.0",
-  "version": "7.0.0-next.1",
+  "version": "7.0.0-next.2",
   "main": "./dist/index.js",
   "module": "./dist/esm.mjs",
   "types": "./dist/index.d.ts",
@@ -21,7 +21,7 @@
     "dist"
   ],
   "dependencies": {
-    "fallout-utility": "*",
+    "fallout-utility": "^2.1.3",
     "lodash.defaultsdeep": "^4.6.1",
     "semver": "^7.3.8",
     "tiny-typed-emitter": "^2.1.0",
