--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -35,5 +35,9 @@
   },
   "peerDependencies": {
     "discord.js": "^14.7.1"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "c5620aa5f046aa426b832c052a4f933817270573"
 }
