--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,15 +18,15 @@
     "build": "npm run clean && npx tsc"
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "dependencies": {
     "fallout-utility": "^2.1.3",
     "lodash.defaultsdeep": "^4.6.1",
     "semver": "^7.3.8",
     "tiny-typed-emitter": "^2.1.0",
-    "ts-mixer": "^6.0.2",
-    "yaml": "^2.2.0"
+    "ts-mixer": "^6.0.2"
   },
   "devDependencies": {
     "@types/lodash.defaultsdeep": "^4.6.7",
