--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -20,7 +20,8 @@
   },
   "files": [
     "bin",
-    "static"
+    "static",
+    "README.md"
   ],
   "dependencies": {
     "@inquirer/confirm": "^0.0.28-alpha.0",
