--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "clean": "npx rimraf ./bin",
-    "build": "npm run clean && npx tsc"
+    "build": "npm run clean && npx tsc",
+    "docs": "npx docgen -i ./src/**/*.ts -c ./docs/custom.json -o ./docs/docs.json --typescript"
   },
   "files": [
     "bin",
