--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -12,16 +12,34 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          ref: ${{ inputs.ref || '' }}
       - name: Install node.js v16
         uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Install dependencidocses
+      - name: Install dependencies
         run: npm run bootstrap
-      - name: Upload docgen artifacts
-        uses: actions/upload-artifact@v3
+      - name: Build docs.json
+        run: npm run docs
+      - name: Extract package and semver from tag
+        if: ${{ github.ref_type == 'tag' }}
+        id: extract-tag
+        uses: discordjs/discord.js/packages/actions/src/formatTag@main
         with:
-          name: docgen
-          path: packages/*/docs/docs.json
+          tag: ${{ github.ref_name }}
+      - name: Move docs to correct directory
+        if: ${{ github.ref_type == 'tag' && matrix.package == steps.extract-tag.outputs.package }}
+        env:
+          PACKAGE: ${{ steps.extract-tag.outputs.package }}
+          SEMVER: ${{ steps.extract-tag.outputs.semver }}
+        run: |
+          mkdir -p out/${PACKAGE}
+          mv packages/${PACKAGE}/docs/docs.json out/${PACKAGE}/${SEMVER}.json
+      - name: Commit and push
+        run: |
+          cd out
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git add .
+          git commit -m "Docs build for ${GITHUB_REF_TYPE} ${GITHUB_REF_NAME}: ${GITHUB_SHA}" || true
+          git push
+
