--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,7 +1,7 @@
 name: Documentation
 on:
   push:
-    branches: ['main', 'v7']
+    branches: ['main', 'v*']
     paths: ['./packages/**/src/**']
     tags: ['**']
 jobs:
