--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation
 on:
   push:
     branches: ['main', 'v7']
-    paths: ['./packages/**/*']
+    paths: ['./packages/**/src/**']
     tags: ['**']
 jobs:
   build:
