--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation
 on:
   push:
     branches: ['main', 'v7']
-    tags: ['**']
+    tags: ['*']
 jobs:
   build:
     name: Build documentation
