--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Documentation
 on:
   push:
     branches: ['main', 'v7']
-    # paths: ['./packages/*/src/**']
+    paths: ['./packages/*/src/**', './.github/worklows/documentation.yml']
     tags: ['*']
   workflow_dispatch:
     inputs:
