--- a/packages/actions/package.json
+++ b/packages/actions/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "globby": "^13.1.3"
   }
 }
