--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -58,6 +58,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.ref || '' }}
 
       - name: Install node.js v16
         uses: actions/setup-node@v3
@@ -80,17 +82,23 @@ jobs:
       - name: Install dependencies
         run: npm run bootstrap
 
-      - name: Get package semver
-        id: get-semver
+      - name: Parse package semver
+        id: parse-semver
         uses: ./packages/actions/src/getSemver
         with:
           package: ${{ matrix.package }}
 
-      - name: Move docs to correct directory
-        if: ${{ matrix.package == steps.get-semver.outputs.package }}
+      - name: Display package semver
         env:
-          PACKAGE: ${{ steps.get-semver.outputs.package }}
-          SEMVER: ${{ steps.get-semver.outputs.semver }}
+          PACKAGE: ${{ steps.parse-semver.outputs.package }}
+          SEMVER: ${{ steps.parse-semver.outputs.semver }}
+        run: echo "package ${PACKAGE}; server (${SEMVER});"
+
+      - name: Move docs to correct directory
+        if: ${{ matrix.package == steps.parse-semver.outputs.package }}
+        env:
+          PACKAGE: ${{ steps.parse-semver.outputs.package }}
+          SEMVER: ${{ steps.parse-semver.outputs.semver }}
         run: |
           echo "docs/packages/${PACKAGE}/docs/docs.json > out/${PACKAGE}/${SEMVER}.json"
           mkdir -p out/${PACKAGE}
